Fix Missing Text

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><a>Steamboat Willie Game (Not Final Name) </a>[Video Game]</li>
         <li><a href="https://www.santanlions.org">San Tan Lions Website</a> [Website]</li>
         <li><a href="https://www.kotsu.red">Marcus Kotsu</a> [Website, Multimedia]</li>
-        <li><a href="https://www.boxcrittersheroes.com"></a> [Blog]</li>
+        <li><a href="https://www.boxcrittersheroes.com">Box Critters Heroes</a> [Fan Blog]</li>
     </ul>
 
     <footer>
